# gd32c103_bootloader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app_padding.cpp  build.sh  link.ld  partition.md  upgrade.cpp
inc/: FreeRTOSConfig.h  config.h  drv_dma.h  drv_simple_uart.h  freertos_mpool.h  onchip_flash_port.h  partition.h  ringbuffer.h  utlist.h
src/: boot_loader_main.c  drv_simple_uart.c  freertos_mpool.c  main.c  onchip_flash_port.c  ringbuffer.c  syscall.c  upgrade.c
xlink/: xlink.h  xlink_generator.py  xlink_port.h  xlink_port_freertos.h  xlink_port_posix.h  xlink_port_stdlib.h
xlink/xlink_generator/: xlink_upgrade.h
xlink/xlink_messagedef/: gd32c103_ab.json  upgrade.json
xlink_generator/: xlink.h  xlink_control.h  xlink_port.h  xlink_port_freertos.h  xlink_port_posix.h  xlink_port_stdlib.h  xlink_upgrade.h
